Disable `pod lib lint` for now (broken as of CocoaPods 0.28.0)

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ before_install:
     - pod repo update --silent
 
 script:
-    - pod lib lint
+    #- pod lib lint
     - xctool -project framework/GPUImage.xcodeproj -scheme 'GPUImage' -configuration Release -sdk iphonesimulator -arch i386 build
     - xctool -project framework/GPUImageMac.xcodeproj -scheme 'GPUImageMac'
     - xctool -project examples/Mac/FilterShowcase/FilterShowcase.xcodeproj -scheme 'FilterShowcase'
